--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"dotenv": "^8.2.0",
+		"@hapi/joi": "^17.1.1",
+		"bcryptjs": "^2.4.3",
 		"express": "^4.17.1",
 		"mysql": "^2.18.1"
 	},
@@ -19,6 +20,7 @@
 		"@babel/core": "^7.10.2",
 		"@babel/node": "^7.10.1",
 		"@babel/preset-env": "^7.10.2",
+		"dotenv": "^8.2.0",
 		"nodemon": "^2.0.4"
 	}
 }
