--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"express": "^4.17.1",
 		"google-auth-library": "^6.0.4",
 		"jsonwebtoken": "^8.5.1",
-		"mysql": "^2.18.1"
+		"mysql": "^2.18.1",
+		"socket.io": "^2.3.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.10.2",
